# latino-json

./: .gitignore  CMakeLists.txt  LICENSE  README.md  instalar.sh  install_manifest.txt
src/: latino-json.c
visualstudio/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  latino-json.sln  latino-json.vcxproj  latino-json.vcxproj.filters
visualstudio/jansson/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  JanssonConfig.cmake  JanssonConfigVersion.cmake  JanssonTargets.cmake  check.vcxproj  check.vcxproj.filters  jansson.pc  jansson.sln  jansson.vcxproj  jansson.vcxproj.filters  json_process.vcxproj  json_process.vcxproj.filters  simple_parse.vcxproj  simple_parse.vcxproj.filters  test_array.vcxproj  test_array.vcxproj.filters  test_copy.vcxproj  test_copy.vcxproj.filters  test_dump.vcxproj  test_dump.vcxproj.filters  test_dump_callback.vcxproj  test_dump_callback.vcxproj.filters  test_equal.vcxproj  test_equal.vcxproj.filters  test_load.vcxproj  test_load.vcxproj.filters  test_loadb.vcxproj  test_loadb.vcxproj.filters  test_number.vcxproj  test_number.vcxproj.filters  test_object.vcxproj  test_object.vcxproj.filters  test_pack.vcxproj  test_pack.vcxproj.filters  test_simple.vcxproj  test_simple.vcxproj.filters  test_unpack.vcxproj  (+1 more)
visualstudio/latino-json.dir/Release/latino-json.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  (+1 more)
(+102 files in other folders)
